feat: Initialize MailFlowAI application with Gmail integration, AI Copilot, core UI components, and updated project documentation and security headers.

--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/brand/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MailFlowAI - AI-Powered Email Assistant</title>
-    <meta name="description" content="MailFlowAI - The next generation AI-powered email client for supercharged productivity. Search, filter, and compose emails using natural language." />
-    <meta name="keywords" content="email, AI, assistant, productivity, MailFlowAI, Gmail" />
-    <meta property="og:title" content="MailFlowAI - AI-Powered Email Assistant" />
-    <meta property="og:description" content="The next generation AI-powered email client for supercharged productivity." />
-    <meta property="og:image" content="/brand/logo.png" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="MailFlowAI - AI-Powered Email Assistant" />
-    <meta name="twitter:description" content="The next generation AI-powered email client for supercharged productivity." />
-    <meta name="twitter:image" content="/brand/logo.png" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/brand/logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MailFlowAI - AI-Powered Email Assistant</title>
+  <meta name="description"
+    content="MailFlowAI - The next generation AI-powered email client for supercharged productivity. Search, filter, and compose emails using natural language." />
+  <meta name="keywords" content="email, AI, assistant, productivity, MailFlowAI, Gmail" />
+  <meta property="og:title" content="MailFlowAI - AI-Powered Email Assistant" />
+  <meta property="og:description"
+    content="The next generation AI-powered email client for supercharged productivity." />
+  <meta property="og:image" content="/screenshots/app-preview.png" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="MailFlowAI - AI-Powered Email Assistant" />
+  <meta name="twitter:description"
+    content="The next generation AI-powered email client for supercharged productivity." />
+  <meta name="twitter:image" content="/screenshots/app-preview.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
